--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "homepage": "https://youxfans.github.io/react-layout",
   "private": true,
   "dependencies": {
+    "antd": "^3.20.0",
+    "babel-plugin-import": "^1.12.0",
+    "customize-cra": "^0.2.14",
     "gh-pages": "^2.0.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "react": "^16.8.6",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
