--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gh-pages": "^2.0.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mobx": "^5.11.0",
+    "mobx-react": "^6.1.1",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
