--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "homepage": "https://youxfans.github.io/react-layout",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.2",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
-    "antd": "^3.20.3",
+    "antd": "^3.22.0",
     "babel-plugin-import": "^1.12.0",
-    "customize-cra": "^0.4.1",
-    "gh-pages": "^2.0.1",
-    "less": "^3.9.0",
+    "customize-cra": "^0.5.0",
+    "gh-pages": "^2.1.1",
+    "less": "^3.10.1",
     "less-loader": "^5.0.0",
-    "mobx": "^5.11.0",
-    "mobx-react": "^6.1.1",
-    "react": "^16.8.6",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
+    "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.1",
     "typescript": "^3.5.3"
   },
   "scripts": {
@@ -30,7 +30,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "updatepkg": "npx npm-check-updates -u && npx yarn upgrade"
   },
   "eslintConfig": {
     "extends": "react-app"
